# hac-analysis-python

./: .gitignore  LICENSE  README.md  pyproject.toml
res/: analysis_constants.json  analysis_parameters.json  benchmark_test_index.json  calibration_constants.json  database.json
src/hac_analysis/: __init__.py  __main__.py  database.py  metadata.py
src/hac_analysis/conf/: config.yaml
tests/: test_database.py  test_metadata.py
